--- a/views/errors/404.ejs
+++ b/views/errors/404.ejs
@@ -1,1 +1,10 @@
-<h1>404 Not found</h1>
+<%- include('includes/head', { pageTitle: 'Page not found' }) %>
+</head>
+<body>
+  <%- include('includes/header') %>
+  <main>
+    <h1>404 Resource Not Found</h1>
+    <p><a class="btn" href="/">Back to safety!</a></p>
+  </main>
+  <%- include('includes/footer') %>
+</body>
