--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,4 @@
-<%- include('customer/includes/head', { pageTitle: 'Home page' }) %>
-<%- include('customer/includes/header') %>
+<%- include('includes/head', { pageTitle: 'Home page' }) %>
+<%- include('includes/header') %>
 <h1>Home Page</h1>
-<%- include('customer/includes/footer') %>
+<%- include('includes/footer') %>
